--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+html {
+  width: "100%";
+  height: "100%";
+}
+body {
+  width: "100%";
+  height: "100%";
+}
+
 .App {
   text-align: center;
+  background-color: #fafafa;
 }
 
 .App-logo {
