--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 html {
   width: "100%";
   height: "100%";
+  overflow-x: hidden;
 }
 body {
   width: "100%";
   height: "100%";
+  overflow-x: hidden;
 }
 
 .App {
