--- a/src/Styles/Homecard.css
+++ b/src/Styles/Homecard.css
@@ -32,3 +32,13 @@ input[type="radio"]:checked:after {
   border-color: #ff6e14;
   background-color: #ff6e14;
 }
+
+/* .wrapper {
+  position: relative;
+}
+
+i.fa-icon {
+  position: absolute;
+  top: 10px;
+  left: 50px;
+} */
