--- a/src/Styles/Searchactivity.css
+++ b/src/Styles/Searchactivity.css
@@ -1,5 +1,7 @@
 .jumbotron-search {
-  background-image: url("https://image.freepik.com/free-vector/search-concept-landing-page_52683-20655.jpg");
+  /* background-image: url("https://image.freepik.com/free-vector/search-concept-landing-page_52683-20655.jpg"); */
+  background-image: url("https://miro.medium.com/max/1684/1*Z6yFlnqeyqNRxnhtFQk65w.png");
+
   background-repeat: "no-repeat";
   background-size: cover;
   background-position: center;
