--- a/src/Styles/Messages.css
+++ b/src/Styles/Messages.css
@@ -1,18 +1,14 @@
-.applycolor {
-  color: #ff6e14;
-}
-
-.imgcontainersearchcard {
+.imgcontainermessages {
   /* position: relative; */
 }
 
-.imgstylesearchcard {
+.imgstylemessages {
   display: initial;
   position: absolute;
   inset: 0px;
   margin: auto;
   width: 90%;
-  height: 180px;
+  height: 85px;
   object-fit: cover;
   object-position: center center;
   border-radius: 12px;
