--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -5,6 +5,20 @@
   background-position: center;
 }
 
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary:active,
+.btn-primary:active:focus:not(:disabled):not(.disabled),
+.btn:focus,
+.btn:active,
+.btn:hover {
+  box-shadow: none !important;
+  outline: 0;
+  background-color: #007bff;
+  cursor: auto;
+  border-color: #007bff;
+}
+
 .map {
   transition: transform 500ms;
 }
